# weather-app-qt

./: .gitignore  CMakeLists.txt  README.md  main.cpp  weatherapp.cpp  weatherapp.h  wetherapp.cpp  wetherapp.h
